Fixed the z-index issue on mobile

--- a/packages/components/src/components/ui/form/sc-form.scss
+++ b/packages/components/src/components/ui/form/sc-form.scss
@@ -9,7 +9,8 @@
     margin-bottom: 0;
   }
 }
-::slotted(*:focus-within) {
+::slotted(*:focus-within),
+::slotted(*:active) {
   position: relative;
   z-index: 1;
 }
